web-infras/parser/tests/fixtures/babel/es2018/async-generators/for-await-async-context/output.txt
[SyntaxError]: 'await' is only allowed within async functions and at the top levels of modules. (2,7)
2|  for await (let x of y);
 |     ^
